--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-spacy==1.10.1
+# spacy==2.1.0
 falcon==2.0.0
 pytest
 requests==2.21.0
@@ -6,3 +6,4 @@ requests==2.21.0
 flask
 futures
 flask-swaggerui
+gunicorn
